--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -22,7 +22,8 @@
 
 
   <div class="footer">
-    <div class="button black" routerLink="/products">商品一覧へ</div>
+    <div class="button white" routerLink="/products">商品一覧</div>
+    <div class="button black" routerLink="edit">編集</div>
   </div>
 </div>  
   
