--- a/src/app/product/product-edit/product-edit.component.html
+++ b/src/app/product/product-edit/product-edit.component.html
@@ -9,11 +9,19 @@
       </div>
       <div class="edit-line">
         <label>名前</label>
-        <input type="text" name="name" formControlName="name" require>
+        <input type="text" name="name" formControlName="name" required maxlength="50">  
+        <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert"> 
+          <div *ngIf="name.errors.required">入力してください</div>
+          <div *ngIf="name.errors.maxlength">50文字以内で入力してください</div>
+        </div>
       </div>
       <div class="edit-line">
         <label>価格</label>
-        <input type="number" name="price" formControlName="price">
+        <input type="number" name="price" formControlName="price" required>
+        <div *ngIf="price.invalid && (price.dirty || price.touched)" class="alert">
+          <div *ngIf="price.errors.required">入力してください</div>
+          <div *ngIf="price.errors.min">100円以上を入力してください</div>
+        </div>
       </div>
       <div class="edit-line">
         <label>説明</label>
@@ -22,7 +30,7 @@
     </div>
     <div class="footer">
       <span class="button white" [routerLink]="['/products', productForm.controls.id.value]">キャンセル</span>
-      <button class="button black" (click)="saveProduct()">保存</button>
+      <button class="button black" [class.disabled]="productForm.invalid">保存</button>
     </div>
   </form>
   
