--- a/src/app/product/product-edit/product-edit.component.scss
+++ b/src/app/product/product-edit/product-edit.component.scss
@@ -36,6 +36,11 @@
         height: 40px;
         font-size: 14px;
       }
+
+      .alert { 
+        margin-top: 8px;
+        color: red;
+      }
     }
   }
 
@@ -46,6 +51,11 @@
 
     .button {
       margin: 0 20px;
+
+      &.disabled {
+        background-color: #B0BEC5;
+        pointer-events: none;
+      }
     }
   }
 }
