--- a/src/app/product/product-edit/product-edit.component.html
+++ b/src/app/product/product-edit/product-edit.component.html
@@ -9,10 +9,11 @@
       </div>
       <div class="edit-line">
         <label>名前</label>
-        <input type="text" name="name" formControlName="name" required maxlength="50">  
+        <input type="text" name="name" formControlName="name" required maxlength="50" appForbiddenWord="ぬるぽ">  
         <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert"> 
           <div *ngIf="name.errors.required">入力してください</div>
           <div *ngIf="name.errors.maxlength">50文字以内で入力してください</div>
+          <div *ngIf="name.errors.forbiddenWord">ガッ</div>
         </div>
       </div>
       <div class="edit-line">
